# server-workspace

./: Cargo.toml  README.md
app/: Cargo.toml  index.html  manifest.json  package-lock.json  service_worker.js
app/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
