[package]
name = "app"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = {version="1.0.139",features=["derive"]}
wasm-bindgen-futures = "0.4.31"
web-sys = {version="0.3.58",features=["console"]}
wasm-bindgen = "0.2.81"
reqwest = {version="0.11.11",features=["json"]}
num-format = "0.4.0"