[package]
name = "server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
clap = { version = "3.1.18", features = ["derive"] }
simple_logger = "2.1.0" 
log = "0.4.17"
mongodb = "2.3.0"
lazy_static = "1.4.0"